# mixture-of-depth-attention

./: .gitignore  PLAN.md  README.md  pyproject.toml
benchmarks/: bench_attention.py
docs/: blog.md  experiment-report.md
experiments/: compare.py  results.md  train_ab.py
experiments/logs/: baseline.jsonl  baseline_val.jsonl  moda.jsonl  moda_val.jsonl
moda/: __init__.py  attention.py  cache.py  config.py  model.py
moda/kernels/: __init__.py  moda_naive.py  moda_triton.py
tests/: test_attention.py  test_cache.py  test_gqa.py  test_kernel.py  test_model.py
